Added multi module management: added a new submodule for managing the activiti-app war overlay